[gd_scene load_steps=8 format=2]

[ext_resource path="res://New_Piskel-3.png_3.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemycontroller.gd" type="Script" id=2]
[ext_resource path="res://art/energy_bar_fill.png" type="Texture" id=3]
[ext_resource path="res://art/energy_bar_bg.png" type="Texture" id=4]
[ext_resource path="res://scenes/TextureProgress.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.0173, 32.2252 )

[sub_resource type="CircleShape2D" id=2]
radius = 44.6241

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12, 6 )
scale = Vector2( 0.376, 0.376 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="rayFloor" type="RayCast2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="attackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
position = Vector2( -0.396851, 0.396858 )
shape = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 866.0
margin_bottom = 104.0
rect_rotation = 360.0
rect_scale = Vector2( 0.3, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer"]
margin_right = 866.0
margin_bottom = 40.0
max_value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween2" type="Tween" parent="VBoxContainer"]

[connection signal="body_entered" from="attackArea" to="." method="_on_attackArea_body_entered"]
